test/valid/56307_maxFunction/maxFunction.agu
-- Author: 56307, Denis Ungureanu
let max (a, b) : (Int, Int) -> Int =
  if a >= b then a else b

let main(_) : Unit -> Unit = print(max(5, 10))