test/invalid-semantic/56307_incompatibleTypes/incompatibleTypes.agu
-- Author: 56306, Denis Ungureanu, Semantic Test 3
let addMismatch (a, b) : (Int, Int) -> Int =
    a + b + "extra"